--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -40,7 +40,6 @@
         android:textSize="10sp"
         android:typeface="normal"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.499"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/app_name" />
 
@@ -51,10 +50,11 @@
         android:layout_marginEnd="24dp"
         android:text="@string/Button1"
         app:icon="@android:drawable/ic_menu_gallery"
+        app:layout_constraintBottom_toBottomOf="@+id/button2"
         app:layout_constraintEnd_toStartOf="@+id/button2"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="206dp" />
+        app:layout_constraintTop_toTopOf="@+id/button2" />
 
     <Button
         android:id="@+id/button2"
@@ -63,9 +63,10 @@
         android:text="@string/Button2"
         app:icon="@android:drawable/ic_popup_sync"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView"
-        app:layout_constraintVertical_bias="0.305"
-        tools:layout_editor_absoluteX="273dp" />
+        app:layout_constraintVertical_bias="0.305" />
 
     <Button
         android:id="@+id/button3"
@@ -74,9 +75,10 @@
         android:layout_marginStart="24dp"
         android:text="@string/Button3"
         app:icon="@android:drawable/ic_dialog_map"
+        app:layout_constraintBottom_toBottomOf="@+id/button2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/button2"
-        tools:layout_editor_absoluteY="206dp" />
+        app:layout_constraintTop_toTopOf="@+id/button2" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
