--- a/app/src/main/res/layout/activity_currency_converter.xml
+++ b/app/src/main/res/layout/activity_currency_converter.xml
@@ -10,7 +10,7 @@
     tools:context=".CurrencyConverterActivity">
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/Button1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:shadowColor="#393939"
@@ -62,7 +62,7 @@
         android:layout_width="17dp"
         android:layout_height="24dp"
         android:background="#070707"
-        app:layout_constraintBottom_toTopOf="@+id/button"
+        app:layout_constraintBottom_toTopOf="@+id/Button1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView2"
