--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -89,7 +89,7 @@
         android:id="@+id/btmusic"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/btmusic"
+        android:text="@string/convertedINR"
         app:cornerRadius="12sp"
         app:icon="@android:drawable/ic_media_play"
         tools:layout_editor_absoluteX="204dp"
