--- a/app/src/main/res/layout/activity_sitesof_india.xml
+++ b/app/src/main/res/layout/activity_sitesof_india.xml
@@ -23,6 +23,8 @@
         android:layout_height="180dp"
         android:layout_marginStart="24dp"
         android:scaleType="centerCrop"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.157"
         app:layout_constraintStart_toEndOf="@+id/imageView2"
         app:srcCompat="@drawable/faisal_fraz_bpslyvziw2e_unsplash"
         tools:layout_editor_absoluteY="16dp" />
@@ -31,11 +33,12 @@
         android:id="@+id/imageView6"
         android:layout_width="180dp"
         android:layout_height="180dp"
+        android:layout_marginStart="10dp"
         android:layout_marginTop="36dp"
         android:scaleType="centerCrop"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2"
-        app:srcCompat="@drawable/rishabh_dev_dklf__tpma8_unsplash"
-        tools:layout_editor_absoluteX="8dp" />
+        app:srcCompat="@drawable/rishabh_dev_dklf__tpma8_unsplash" />
 
     <TextView
         android:id="@+id/textView2"
@@ -53,20 +56,22 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
+        android:layout_marginEnd="132dp"
         android:text="Taj Mahal"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.335"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintHorizontal_bias="0.982"
+        app:layout_constraintStart_toEndOf="@+id/textView2"
         app:layout_constraintTop_toBottomOf="@+id/imageView5" />
 
     <TextView
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
         android:layout_marginTop="12dp"
         android:text="Rajasthan"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.022"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView6" />
 
