--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -84,19 +84,19 @@
         app:cornerRadius="12sp"
         app:icon="@android:drawable/ic_dialog_map"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/btmusic"
+        app:layout_constraintEnd_toStartOf="@+id/Button4"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/Button1"
         app:layout_constraintVertical_bias="0.0" />
 
     <Button
-        android:id="@+id/btmusic"
+        android:id="@+id/Button4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="14dp"
         android:layout_marginEnd="4dp"
-        android:text="@string/btmusic"
+        android:text="@string/Button4"
         app:cornerRadius="12sp"
         app:icon="@android:drawable/ic_media_play"
         app:layout_constraintBottom_toBottomOf="parent"
