--- a/app/src/main/res/layout/activity_currency_converter.xml
+++ b/app/src/main/res/layout/activity_currency_converter.xml
@@ -29,7 +29,7 @@
         app:layout_constraintTop_toBottomOf="@+id/imageView2" />
 
     <EditText
-        android:id="@+id/editTextINR"
+        android:id="@+id/tvINR"
         android:layout_width="164dp"
         android:layout_height="48dp"
         android:layout_marginEnd="16dp"
@@ -83,7 +83,7 @@
         android:id="@+id/resultTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView"
+        android:text="@string/tvresult"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
