--- a/app/src/main/res/layout/activity_folk_music.xml
+++ b/app/src/main/res/layout/activity_folk_music.xml
@@ -6,11 +6,15 @@
     android:layout_height="match_parent"
     tools:context=".FolkMusic">
 
-    <TextView
-        android:id="@+id/textView6"
+    <include layout="@layout/music_include_card_pibare" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="deepesh music section"
-        tools:layout_editor_absoluteX="133dp"
-        tools:layout_editor_absoluteY="330dp" />
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.5" />
+
+    <include layout="@layout/music_include_card_raga" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
