--- a/app/src/main/res/layout/activity_sitesof_india.xml
+++ b/app/src/main/res/layout/activity_sitesof_india.xml
@@ -10,24 +10,26 @@
         android:id="@+id/imageView2"
         android:layout_width="180dp"
         android:layout_height="180dp"
+        android:layout_marginTop="16dp"
         android:scaleType="centerCrop"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.037"
         app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@drawable/chirag_jain_vpowkxubko8_unsplash"
-        tools:layout_editor_absoluteY="16dp" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/chirag_jain_vpowkxubko8_unsplash" />
 
     <ImageView
         android:id="@+id/imageView5"
         android:layout_width="180dp"
         android:layout_height="180dp"
         android:layout_marginStart="24dp"
+        android:layout_marginTop="16dp"
         android:scaleType="centerCrop"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.157"
         app:layout_constraintStart_toEndOf="@+id/imageView2"
-        app:srcCompat="@drawable/faisal_fraz_bpslyvziw2e_unsplash"
-        tools:layout_editor_absoluteY="16dp" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/faisal_fraz_bpslyvziw2e_unsplash" />
 
     <ImageView
         android:id="@+id/imageView6"
