--- a/app/src/main/res/layout/activity_currency_converter.xml
+++ b/app/src/main/res/layout/activity_currency_converter.xml
@@ -26,7 +26,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView2" />
+        app:layout_constraintTop_toBottomOf="@+id/ivGoldenTemple" />
 
     <EditText
         android:id="@+id/tvINR"
@@ -65,12 +65,12 @@
         app:layout_constraintBottom_toTopOf="@+id/Button1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView2"
+        app:layout_constraintTop_toBottomOf="@+id/ivGoldenTemple"
         app:layout_constraintVertical_bias="0.591"
         app:srcCompat="@android:drawable/stat_notify_sync" />
 
     <ImageView
-        android:id="@+id/imageView2"
+        android:id="@+id/ivGoldenTemple"
         android:layout_width="407dp"
         android:layout_height="273dp"
         app:layout_constraintEnd_toEndOf="parent"
