--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -52,11 +52,12 @@
                 android:id="@+id/Button1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="52dp"
+                android:layout_marginTop="32dp"
                 android:text="@string/Button1"
                 app:cornerRadius="12sp"
                 app:icon="@android:drawable/ic_menu_gallery"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.37"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -64,20 +65,24 @@
                 android:id="@+id/button2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:layout_marginBottom="32dp"
                 android:text="@string/Button2"
                 app:cornerRadius="12sp"
                 app:icon="@android:drawable/ic_popup_sync"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.302"
+                app:layout_constraintHorizontal_bias="0.334"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/Button1" />
+                app:layout_constraintTop_toBottomOf="@+id/Button1"
+                app:layout_constraintVertical_bias="0.0" />
 
             <Button
                 android:id="@+id/button3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
-                android:layout_marginTop="52dp"
+                android:layout_marginTop="32dp"
                 android:text="@string/Button3"
                 app:cornerRadius="12sp"
                 app:icon="@android:drawable/ic_dialog_map"
@@ -88,8 +93,9 @@
                 android:id="@+id/Button4"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="80dp"
-                android:layout_marginTop="4dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="16dp"
+                android:layout_marginBottom="32dp"
                 android:text="@string/Button4"
                 app:cornerRadius="12sp"
                 app:icon="@android:drawable/ic_media_play"
