--- a/app/src/main/res/layout/activity_currency_converter.xml
+++ b/app/src/main/res/layout/activity_currency_converter.xml
@@ -30,7 +30,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/jovyn_chamb_iwmfiinivp4_unsplash" />
+        app:srcCompat="@drawable/currency" />
 
     <EditText
         android:id="@+id/tvAmount"
