--- a/app/src/main/res/layout-land/activity_currency_converter.xml
+++ b/app/src/main/res/layout-land/activity_currency_converter.xml
@@ -32,7 +32,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0"
-        app:srcCompat="@drawable/jovyn_chamb_iwmfiinivp4_unsplash" />
+        app:srcCompat="@drawable/currency" />
 
     <EditText
         android:id="@+id/tvAmount"
